--- a/public/sass/components/_headerTitle.scss
+++ b/public/sass/components/_headerTitle.scss
@@ -12,6 +12,7 @@
 		$color-secondary-dark
 	);
 	box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
+	// @media only screen and (max-width: $bp-medium)
 }
 
 .title {
