--- a/views/pages/services.ejs
+++ b/views/pages/services.ejs
@@ -154,4 +154,5 @@
       </div>
     </div>
 </section>
+<script src="/src/expandServiceCards/expand.js"></script>
 <%- include ("../partials/footer") -%>
