--- a/views/partials/modal.ejs
+++ b/views/partials/modal.ejs
@@ -1,5 +1,25 @@
-<div id="myModal" class="modal">
-  <span class="close">&times;</span>
-  <img class="modal-content" id="img01">
-  <div id="caption"></div>
+<div id="galleryModal" class="modal">
+  <span class="close"></span>
+  <div class="arrows">
+    <div class="arrows--left"><p>&larr;</p></div>
+    <div class="arrows--right"><p>&rarr;</p></div>
+  </div>
+  <img class="modal-content" id="current">
+  <!-- <div id="caption"></div> -->
+  <div class="galleryDisplay">
+    <img class="modal-content--bottom">
+    <img class="modal-content--bottom">
+    <img class="modal-content--bottom">
+    <img class="modal-content--bottom">
+    <img class="modal-content--bottom">
+    <img class="modal-content--bottom">
+    <img class="modal-content--bottom">
+    <img class="modal-content--bottom">
+    <img class="modal-content--bottom">
+    <img class="modal-content--bottom">
+    <img class="modal-content--bottom">
+    <img class="modal-content--bottom">
+    <img class="modal-content--bottom">
+    <img class="modal-content--bottom">
+  </div>
 </div>
