--- a/views/partials/rejected.ejs
+++ b/views/partials/rejected.ejs
@@ -1,4 +1,4 @@
 <div>
   <h2>There was a Error with your form response</h2>
-  <h3>Please click here to <em><a href="/">Redirect</a></em></h3>
+  <h3>Please click here to <em><a href="/contact">Redirect</a></em></h3>
 </div>
