--- a/views/partials/typewriter.ejs
+++ b/views/partials/typewriter.ejs
@@ -1,12 +1,11 @@
 <div class="typewriter__container">
-  <h1 class="typewriter--header1">J&M 
-    <br>
-    General Contractors
+  <h1 class="typewriter--header1">
+    <p>J&M</p> 
+    <p>General Contractors</p>
     <!-- <span class="txt-type" data-wait="3000" data-words='["Contractors", "Services", "Staff"]'></span> -->
   </h1>
-  
-  <br>
+  <div class="typewriter--lower">
     <h3 class="typewriter--header2">Contact Us!</h3>
-    <br>
     <a class="btn btn-generic" id="main-button" href="/contact">Contact</a>
+  </div>
 </div>
