--- a/public/sass/base/_typography.scss
+++ b/public/sass/base/_typography.scss
@@ -25,9 +25,5 @@ h5 {
 a {
 	text-decoration-line: none;
 	color: #000;
-	color: rgb(0, 0, 0);
-	@media only screen and (max-width: $bp-medium) {
-		color: #fff;
-		color: rgb(255, 255, 255);
-	}
+	color: rgba(0, 0, 0, 1);
 }
