--- a/public/sass/components/_navbar.scss
+++ b/public/sass/components/_navbar.scss
@@ -204,19 +204,24 @@
 // }
 
 .header {
+	z-index: 9999;
 	background: var(--background);
 	// box-shadow: 0 1px 3px $color-black;
-	box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+	// box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
 
-	position: relative;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	& .logo {
-		// need padding bc of justify-content: space-between
-		padding-left: 6rem;
-	}
-	& .logo-img {
+
+	position: fixed;
+	width: 100vw;
+}
+
+.logo {
+	// need padding bc of justify-content: space-between
+	padding-left: 15vw;
+
+	&-img {
 		width: auto;
 		height: 5rem;
 		margin-top: 0.5rem;
@@ -232,6 +237,7 @@
 	top: -9999px !important;
 	left: -9999px !important;
 	display: none;
+
 	@media only screen and (max-width: $bp-medium) {
 		display: flex;
 	}
@@ -244,12 +250,13 @@
 		position: absolute;
 		top: 0;
 		right: 0;
+
 		margin: 2rem 0 0 0;
 		padding: 0 1rem;
 		height: 50%;
 		display: flex;
 		align-items: center;
-
+		cursor: pointer;
 		transform: translateY(-6rem);
 
 		@media only screen and (max-width: $bp-medium) {
@@ -293,7 +300,6 @@
 
 .nav {
 	position: relative;
-
 	// need padding bc of justify-content: space-between
 	padding-right: 6rem;
 }
@@ -303,18 +309,22 @@
 	font-size: 2rem;
 	display: flex;
 
+	opacity: 1;
 	transition: all 0.5s;
+	z-index: -1;
 
 	@media only screen and (max-width: $bp-medium) {
+		opacity: 0;
 		width: 100vw;
 		position: absolute;
 		right: 0;
 		// top: -25rem;
-		top: 0;
+		top: -1px;
 		transform: translateY(-25rem);
 		flex-direction: column;
 		align-items: center;
 
+		padding-bottom: 1rem;
 		font-size: 1.75rem;
 		letter-spacing: 0.3rem;
 		color: white;
@@ -324,29 +334,39 @@
 		padding: 0 0.7rem;
 		border-radius: 5px;
 		transition: all 0.2s;
+
 		&:hover {
-			background-image: linear-gradient(
-				90deg,
-				var(--orange-linear) 20%,
-				var(--yellow-linear) 80%
-			);
-			box-shadow: 0 0 1px black;
+			border: solid 1px black;
+			// background-image: linear-gradient(
+			// 	90deg,
+			// 	var(--orange-linear) 20%,
+			// 	var(--yellow-linear) 80%
+			// );
+			// box-shadow: 0 0 1px black;
 			@media only screen and (max-width: $bp-medium) {
 				box-shadow: none;
 			}
 		}
 	}
+
+	& .nav--link {
+		opacity: 1;
+	}
 }
 
 // used for event click for hamburger
 .hamburger {
-	// top: 3.2rem;
 	transform: translateY(3.2rem);
+	opacity: 1;
 	// background-image: linear-gradient(
 	// 	to right bottom,
 	// 	rgba(0, 0, 0, 0.9),
 	// 	rgba(39, 52, 99, 0.9)
 	// );
+	background: white;
+	& .nav--link {
+		opacity: 1;
+	}
 }
 
 .hamburger-title {
