--- a/public/sass/components/_typewriter.scss
+++ b/public/sass/components/_typewriter.scss
@@ -4,33 +4,39 @@
 	left: 0%;
 	margin: 0;
 
-	z-index: 1;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: space-evenly;
+
 	height: 100%;
-	width: 45%;
-	padding: 0 3rem;
-	background: var(--whiteRGBA);
+	width: 50%;
+	padding: 0 14rem 0 0;
+
+	background: rgba(170, 170, 170, 0.4);
+	z-index: 10;
+	clip-path: polygon(0 0, 100% 0, 58% 100%, 0% 100%);
+
+	@supports (backdrop-filter: blur(4px)) {
+		backdrop-filter: blur(4px);
+	}
 
 	@media only screen and (max-width: $bp-medium) {
-		background-image: linear-gradient(
-			to right bottom,
-			rgba(0, 0, 0, 0.85),
-			rgba(39, 52, 99, 0.85)
-		);
-		// width: 100%;
-		width: 80%;
-		height: 50%;
+		width: 100%;
+		height: 100%;
 		padding: 0 1rem;
 		margin: auto auto;
 
-		border-radius: 1rem;
-		grid-column: 1 / -1;
-	}
+		clip-path: none;
+		background-image: linear-gradient(
+			to right bottom,
+			rgba(0, 0, 0, 0.541),
+			rgba(39, 52, 99, 0.568)
+		);
 
-	@media only screen and (max-width: $bp-small) {
-		width: 100%;
+		border-radius: 1rem;
+		// @supports (backdrop-filter: blur(4px)) {
+		// 	backdrop-filter: blur(4px);
+		// }
 	}
 }
 
@@ -75,6 +81,7 @@
 
 .typewriter--header2 {
 	font-size: 2rem;
+	padding-bottom: 2rem;
 	@media only screen and (max-width: $bp-medium) {
 		font-size: 1.7rem;
 	}
@@ -82,4 +89,9 @@
 	@media only screen and (max-width: $bp-small) {
 		font-size: 1.5rem;
 	}
+}
+
+.typewriter--lower {
+	display: flex;
+	flex-direction: column;
 }
