--- a/public/sass/pages/_about.scss
+++ b/public/sass/pages/_about.scss
@@ -1,12 +1,7 @@
 .about__header {
-	grid-column: 1 / -1;
-	grid-row: 9 / 10;
 }
 
 .about__container {
-	grid-column: 1 / -1;
-	grid-row: 10 / 11;
-
 	height: auto;
 	min-height: 100vh;
 	width: 100%;
@@ -14,6 +9,10 @@
 	background: $color-white;
 
 	padding: 6rem;
+	@media only screen and (max-width: $bp-medium) {
+		padding-left: 0;
+		padding-right: 0;
+	}
 	&--wrapper {
 		position: relative;
 		box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
