--- a/public/sass/pages/_gallery.scss
+++ b/public/sass/pages/_gallery.scss
@@ -1,16 +1,14 @@
 .gallery__header {
-	grid-column: 1 / -1;
-	grid-row: 5 / 6;
 }
 
 .gallery__wrapper {
 	background-color: $color-white;
-	grid-column: 1 / -1;
-	grid-row: 6 / 7;
-
 	width: 100%;
 	padding: 6rem;
-	// padding: 0 5rem 0 5rem;
+	@media only screen and (max-width: $bp-medium) {
+		padding-left: 0;
+		padding-right: 0;
+	}
 }
 
 .gallery {
@@ -20,9 +18,9 @@
 	width: 100%;
 
 	display: grid;
-	/*grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(7, 5vw);*/
-	grid-template: repeat(7, 5vw) / repeat(8, 1fr);
+	grid-template-columns: repeat(8, 1fr);
+	grid-template-rows: repeat(7, 5vw);
+	// grid-template: repeat(7, 5vw) / repeat(8, 1fr);
 
 	grid-gap: 1.5rem;
 	padding: 1.5rem;
