--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,19 +18,23 @@
 	</head>
 	<body>
 	<header class="header">
-		<h1 class="logo"><img class="logo-img" src="./img/images/Logo.jpg" alt="Logo"></h1>
+		<h1 class="logo"><a href="/"><img class="logo-img" src="./img/images/Logo.jpg" alt="J&M logo"></a></h1>
 		<input type="checkbox" id="nav-toggle" class="nav-toggle"/>
 		<nav class="nav">
 			<ul class="nav__list">
-				<li class="nav__list--item"><a href="/">Home</a></li>
-				<li class="nav__list--item"><a href="/services">Services</a></li>
-				<li class="nav__list--item"><a href="/gallery">Gallery</a></li>
-				<li class="nav__list--item"><a href="/about-us">About</a></li>
-				<li class="nav__list--item"><a href="/testimonials">Testimonial</a></li>
-				<li class="nav__list--item"><a href="/contact" >Contact</a></li>
+				<li class="nav__list--item"><a class="nav--link" href="/">Home</a></li>
+				<li class="nav__list--item"><a class="nav--link" href="/services">Services</a></li>
+				<li class="nav__list--item"><a class="nav--link" href="/gallery">Gallery</a></li>
+				<li class="nav__list--item"><a class="nav--link" href="/about-us">About</a></li>
+				<li class="nav__list--item"><a class="nav--link" href="/testimonials">Testimonial</a></li>
+				<li class="nav__list--item"><a class="nav--link" href="/contact" >Contact</a></li>
 			</ul>
 		</nav>
 		<label for="nav-toggle" class="nav-toggle-label">
 			<span></span>
 		</label>
 	</header>
+	<br>
+	<br>
+	<br>
+	<br>
