--- a/views/partials/modal.ejs
+++ b/views/partials/modal.ejs
@@ -1,25 +1,27 @@
 <div id="galleryModal" class="modal">
   <span class="close"></span>
-  <div class="arrows">
+  <!-- <div class="arrows">
     <div class="arrows--left"><p>&larr;</p></div>
     <div class="arrows--right"><p>&rarr;</p></div>
-  </div>
+  </div> -->
   <img class="modal-content" id="current">
   <!-- <div id="caption"></div> -->
   <div class="galleryDisplay">
-    <img class="modal-content--bottom">
-    <img class="modal-content--bottom">
-    <img class="modal-content--bottom">
-    <img class="modal-content--bottom">
-    <img class="modal-content--bottom">
-    <img class="modal-content--bottom">
-    <img class="modal-content--bottom">
-    <img class="modal-content--bottom">
-    <img class="modal-content--bottom">
-    <img class="modal-content--bottom">
-    <img class="modal-content--bottom">
-    <img class="modal-content--bottom">
-    <img class="modal-content--bottom">
-    <img class="modal-content--bottom">
+    <ul class="galleryDisplay__container">
+      <li><img class="modal-content--bottom"></li>
+      <li><img class="modal-content--bottom"></li>
+      <li><img class="modal-content--bottom"></li>
+      <li><img class="modal-content--bottom"></li>
+      <li><img class="modal-content--bottom"></li>
+      <li><img class="modal-content--bottom"></li>
+      <li><img class="modal-content--bottom"></li>
+      <li><img class="modal-content--bottom"></li>
+      <li><img class="modal-content--bottom"></li>
+      <li><img class="modal-content--bottom"></li>
+      <li><img class="modal-content--bottom"></li>
+      <li><img class="modal-content--bottom"></li>
+      <li><img class="modal-content--bottom"></li>
+      <li><img class="modal-content--bottom"></li>
+    </ul>
   </div>
 </div>
