--- a/public/css/style.css
+++ b/public/css/style.css
@@ -213,10 +213,7 @@ a {
     border-radius: 5px;
     transition: all 0.2s; }
     .nav__list--item:hover {
-      border: solid 1px black; }
-      @media only screen and (max-width: 50em) {
-        .nav__list--item:hover {
-          box-shadow: none; } }
+      opacity: 0.4; }
   .nav__list .nav--link {
     opacity: 1; }
 
@@ -252,17 +249,6 @@ a {
   display: block;
   max-width: 57rem;
   border: solid 1rem #fff; }
-
-.modal-content--bottom {
-  height: 100px;
-  width: 100px;
-  border: 2px solid white;
-  overflow: auto;
-  opacity: 0.5; }
-  .modal-content--bottom:hover {
-    opacity: 1;
-    cursor: pointer;
-    transform: scale(1.05); }
 
 /* Caption of Modal Image */
 #caption {
@@ -336,10 +322,24 @@ a {
 
 .galleryDisplay {
   position: relative;
-  overflow: auto;
-  display: block;
   width: 100%;
   padding: 1rem; }
+
+.galleryDisplay__container {
+  display: flex;
+  justify-content: space-between;
+  overflow: auto; }
+
+.modal-content--bottom {
+  height: 100px;
+  width: 100px;
+  border: 2px solid white;
+  opacity: 0.5;
+  margin: 0 1rem; }
+  .modal-content--bottom:hover {
+    opacity: 1;
+    cursor: pointer;
+    transform: scale(1.05); }
 
 .arrows {
   color: #fff;
@@ -404,11 +404,12 @@ a {
   margin: 0;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
+  align-items: center;
   height: 100%;
   width: 50%;
   padding: 0 14rem 0 0;
-  background: rgba(170, 170, 170, 0.4);
+  background: rgba(194, 192, 192, 0.534);
   z-index: 10;
   clip-path: polygon(0 0, 100% 0, 58% 100%, 0% 100%); }
   @supports (backdrop-filter: blur(4px)) {
@@ -439,11 +440,11 @@ a {
       color: var(--white); } }
 
 .typewriter--header1 {
-  font-size: 3.5rem;
+  font-size: 4rem;
   text-align: center; }
   @media only screen and (max-width: 62.5em) {
     .typewriter--header1 {
-      font-size: 5rem; } }
+      font-size: 4rem; } }
   @media only screen and (max-width: 50em) {
     .typewriter--header1 {
       font-size: 3rem; } }
@@ -463,7 +464,18 @@ a {
 
 .typewriter--lower {
   display: flex;
-  flex-direction: column; }
+  width: 75%;
+  flex-direction: column;
+  align-items: center;
+  font-size: 2rem; }
+  .typewriter--lower .phone-number {
+    font-weight: bold;
+    letter-spacing: 0.5rem;
+    color: #fff;
+    padding-bottom: 1rem; }
+    @media only screen and (max-width: 50em) {
+      .typewriter--lower .phone-number {
+        color: #000; } }
 
 .header__style {
   width: 100%;
