--- a/views/partials/typewriter.ejs
+++ b/views/partials/typewriter.ejs
@@ -5,7 +5,8 @@
     <!-- <span class="txt-type" data-wait="3000" data-words='["Contractors", "Services", "Staff"]'></span> -->
   </h1>
   <div class="typewriter--lower">
-    <h3 class="typewriter--header2">Contact Us!</h3>
+    <h3 class="typewriter--header2">Call us to get a free quote for your next project</h3>
+    <a class="phone-number" href="tel:999-999-9999">(999) - 999 - 9999</a>
     <a class="btn btn-generic" id="main-button" href="/contact">Contact</a>
   </div>
 </div>
