--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,7 +47,7 @@ body {
   color: var(--black);
   font-weight: 300;
   line-height: 1.6;
-  background-color: #aaa; }
+  background-color: #fff; }
 
 .container {
   display: grid;
@@ -547,7 +547,17 @@ a {
     border-color: #000; }
 
 #form-button {
-  width: 100%; }
+  min-width: 20%;
+  width: 20%; }
+  @media only screen and (max-width: 62.5em) {
+    #form-button {
+      width: 30%; } }
+  @media only screen and (max-width: 50em) {
+    #form-button {
+      width: 40%; } }
+  @media only screen and (max-width: 37.5em) {
+    #form-button {
+      width: 100%; } }
 
 #main-button {
   width: 40%; }
@@ -613,16 +623,17 @@ a {
   justify-content: space-between;
   align-items: center;
   background-color: #fff;
-  padding: 5rem 0;
+  padding: 6rem 0;
   color: black; }
 
 .card {
   position: relative;
   height: auto;
-  width: 90%; }
+  width: 100%;
+  padding: 0 6rem; }
   @media only screen and (max-width: 50em) {
     .card {
-      width: 100%; } }
+      padding: 0; } }
   .card:not(:last-child) {
     margin-bottom: 3rem; }
   .card__side {
@@ -726,7 +737,7 @@ a {
 .gallery {
   position: relative;
   margin: 0 auto;
-  height: auto;
+  height: 100%;
   width: 100%;
   display: grid;
   grid-template-columns: repeat(8, 1fr);
@@ -787,8 +798,7 @@ a {
       cursor: pointer; }
 
 .about__container {
-  height: auto;
-  min-height: 100vh;
+  height: 100%;
   width: 100%;
   background: #fff;
   padding: 6rem; }
@@ -833,6 +843,7 @@ a {
 .testimonial__container {
   height: auto;
   width: 100%;
+  height: 100%;
   padding: 6rem;
   background: #fff; }
   @media only screen and (max-width: 50em) {
@@ -887,119 +898,82 @@ a {
     z-index: 0; }
 
 .footer {
-  display: grid;
-  grid-template-columns: repeat(9, 1fr);
-  grid-template-rows: repeat(8, min-content);
-  height: auto;
-  min-height: 40rem;
-  padding: 2rem 6rem 2rem 6rem;
-  background: var(--backgroundFooter);
-  color: var(--white);
-  font-size: 2rem; }
-  @media only screen and (max-width: 50em) {
-    .footer {
-      font-size: 1.8rem; } }
-  @media only screen and (max-width: 37.5em) {
-    .footer {
-      font-size: 1.4rem; } }
-  .footer__header {
-    grid-column: 4 / 7;
-    grid-row: 1 / 2;
-    color: var(--white);
-    text-align: center;
-    letter-spacing: 0.3rem;
-    font-size: 3rem;
-    padding-top: 3rem; }
-    @media only screen and (max-width: 37.5em) {
-      .footer__header {
-        grid-column: 3 / 8;
-        font-size: 2.5rem; } }
-    .footer__header hr {
-      width: 60%;
-      margin: 0 auto;
-      border: solid 2px white;
-      border-radius: 3px; }
-      @media only screen and (max-width: 62.5em) {
-        .footer__header hr {
-          width: 70%; } }
-      @media only screen and (max-width: 50em) {
-        .footer__header hr {
-          width: 90%; } }
-      @media only screen and (max-width: 37.5em) {
-        .footer__header hr {
-          width: 66%; } }
+  display: flex;
+  flex-direction: column;
+  font-size: 2rem;
+  height: 100%;
+  width: 100vw;
+  background: #fff; }
   .footer__info {
-    grid-column: 1 / 5;
-    grid-row: 2 / 3;
-    padding: 2rem;
-    text-align: center;
-    height: auto;
-    align-self: center; }
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    height: 100%; }
     @media only screen and (max-width: 50em) {
       .footer__info {
-        grid-column: 1 / -1;
-        padding: 6rem 0 2rem 0;
-        align-self: flex-start; } }
-  .footer__form {
-    grid-column: 6 / -1;
-    grid-row: 2 / 3;
-    padding: 2rem;
-    height: auto;
-    font-size: 1rem; }
-    @media only screen and (max-width: 50em) {
-      .footer__form {
-        grid-column: 3 / 8;
-        grid-row: 3 / 4;
-        font-size: 0.8rem;
-        padding: 6rem 0; } }
-    @media only screen and (max-width: 37.5em) {
-      .footer__form {
-        font-size: 0.6rem; } }
-    .footer__form p {
-      font-size: 1.4rem;
-      text-align: center;
-      padding-bottom: 2rem; }
-    .footer__form textarea {
-      width: 100%; }
-  .footer__social {
-    grid-column: 1 / -1;
-    grid-row: 3 / 4;
-    text-align: center;
-    color: var(--white);
-    padding: 2rem;
-    width: 100%;
-    height: auto; }
-    @media only screen and (max-width: 50em) {
-      .footer__social {
-        grid-row: 4 / 5; } }
-    .footer__social i {
-      margin: 2rem;
-      display: inline-block;
-      font-size: 6rem; }
+        flex-direction: column;
+        align-items: center;
+        justify-content: stretch; } }
+  @media only screen and (max-width: 50em) {
+    .footer hr {
+      display: none; } }
+
+.contact--info {
+  width: 50%;
+  height: 90vh;
+  padding: 3rem 6rem;
+  text-align: center; }
+  @media only screen and (max-width: 50em) {
+    .contact--info {
+      padding: 3rem 0;
+      height: 30%; } }
+
+.footer__form {
+  width: 50%;
+  padding: 3rem 6rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  @media only screen and (max-width: 50em) {
+    .footer__form {
+      padding: 3rem 0; } }
+
+.form--container {
+  width: 50%;
+  margin: 0 auto;
+  padding: 6rem;
+  font-size: 2rem; }
 
 .form {
-  height: auto; }
-  .form__group {
-    margin-bottom: 1rem; }
+  display: flex;
+  flex-direction: column;
+  padding: 1rem 0;
+  width: 100%;
+  background: #fff; }
+  .form__label {
+    display: block;
+    pointer-events: none;
+    transition: all 0.3s; }
+  .form__textarea {
+    resize: none;
+    border-radius: 5px; }
+  .form__input:placeholder-shown + .form__label {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-4rem); }
   .form__input {
     display: block;
     width: 100%;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     font-family: inherit;
-    color: inherit;
+    color: #000;
     padding: 1rem;
-    background-color: rgba(255, 255, 255, 0.5);
     border: none;
     border-radius: 2px;
-    border-bottom: 3px solid transparent;
+    border-bottom: 3px solid black;
     transition: all 0.3s; }
-    @media only screen and (max-width: 50em) {
-      .form__input {
-        width: 100%; } }
-    .form__input::-webkit-input-placeholder {
-      color: var(--white); }
     .form__input::placeholder {
-      color: var(--white); }
+      color: #000; }
     .form__input:focus {
       outline: none;
       box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
@@ -1008,31 +982,3 @@ a {
       border-bottom: 3px solid var(--passed); }
     .form__input:focus:invalid {
       border-bottom: 3px solid var(--danger); }
-  .form__label {
-    font-size: 1.5rem;
-    font-weight: 700;
-    margin: 0 0 1rem 1rem;
-    display: block;
-    transition: all 0.3s; }
-  .form .form__textarea {
-    height: 20rem;
-    margin-bottom: -0.5rem;
-    padding: 1rem;
-    letter-spacing: 2px;
-    font-family: inherit;
-    resize: none;
-    border-radius: 3px;
-    outline-style: none; }
-    .form .form__textarea:focus {
-      background: #eeeeee; }
-    .form .form__textarea:focus:valid {
-      border-bottom: solid 3px var(--passed); }
-    .form .form__textarea:focus:invalid {
-      border-bottom: solid 3px var(--danger); }
-
-.submit-thanks {
-  padding-top: 5rem;
-  font-size: 3rem !important; }
-  @media only screen and (max-width: 50em) {
-    .submit-thanks {
-      font-size: 2rem !important; } }
