--- a/public/sass/base/_base.scss
+++ b/public/sass/base/_base.scss
@@ -105,7 +105,7 @@ body {
 	font-weight: 300;
 	line-height: 1.6;
 
-	background-color: $color-grey-light-2;
+	background-color: $color-white;
 }
 
 .container {
