--- a/public/sass/components/_button.scss
+++ b/public/sass/components/_button.scss
@@ -68,8 +68,8 @@
 
 	text-decoration: none;
 
-	&:hover,
-	&:focus {
+	&:hover {
+
 	}
 
 	&:focus {
@@ -84,7 +84,17 @@
 }
 
 #form-button {
-	width: 100%;
+	min-width: 20%;
+	width: 20%;
+	@media only screen and (max-width: $bp-large) {
+		width: 30%;
+	}
+	@media only screen and (max-width: $bp-medium) {
+		width: 40%;
+	}
+	@media only screen and (max-width: $bp-small) {
+		width: 100%;
+	}
 }
 
 #main-button {
