--- a/public/sass/pages/_about.scss
+++ b/public/sass/pages/_about.scss
@@ -2,8 +2,8 @@
 }
 
 .about__container {
-	height: auto;
-	min-height: 100vh;
+	height: 100%;
+	// min-height: 100vh;
 	width: 100%;
 
 	background: $color-white;
