added footer info

--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -55,31 +55,4 @@
 <% } else { %>
   <%- include ("../partials/submitForm") -%>
   <% } %>
-
-
-<footer class="footer" id="contact">
-  <section class="footer__info">
-    <div class="contact--info">
-
-      <div class="footer__info--address">
-        J & M General Contractors 
-        Fullerton, CA 
-        License # 1002460
-      </div>
-      <div class="footer__info--phone">
-        Call us: 866-755-4001 
-      </div>
-      <p>
-      OR
-      to reach
-      </p>
-      <div class="footer__info--sub-contact">
-        <p>Nancy Montellano/Office Manager: 714-323-0649</p>
-        <p>Katrina Shuper/Administration: 714-872-7224</p>
-      </div>
-      <div class="footer__info--email">
-        Email us:SERVICE@JMGCINC.COM
-      </div>
-    </div>
-  </section>
-</footer>
+<%- include ("../partials/footer") -%>
